Optimized memory usage, moved to upload backup of database created with SQL command